--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -42,13 +42,13 @@
       <label for="wojewodztwo">Województwo:</label>
       <input type="text" id="wojewodztwo" name="wojewodztwo">
 
-      <label for="nrE">Nr uprawnień EKSPLOATACJA:</label>
+      <label for="nrE">Nr upr. EKSPLOATACJA:</label>
       <textarea id="nrE" name="nrE" placeholder="Jeżeli posiadasz również uprawnienia pomiarowe, wypełniasz tylko pole poniżej: Nr uprawnień E z pomiarami"></textarea>
 
-      <label for="nrEPomiary">Nr uprawnień EKSPLOATACJA Z POMIARAMI:</label>
+      <label for="nrEPomiary">Nr upr. EKSPLOATACJA Z POMIARAMI:</label>
       <textarea id="nrEPomiary" name="nrEPomiary" placeholder="Jeżeli nie posiadasz pozostaw pole puste"></textarea>
 
-      <label for="nrD">Nr uprawnień DOZÓR:</label>
+      <label for="nrD">Nr upr. DOZÓR:</label>
       <textarea id="nrD" name="nrD" placeholder="Jeżeli nie posiadasz pozostaw pole puste"></textarea>
 
       <label for="email">Email:</label>
