--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -9,188 +9,151 @@
 
   <style>
     body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f4f6f8; display: flex; justify-content: center; padding: 20px; }
-    .form-wrapper { display: flex; flex-direction: column; align-items: flex-start; width: 100%; max-width: 600px; }
-    form { background-color: #fff; padding: 30px 40px; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); width: 100%; }
-    h2 { text-align: center; color: #333; margin-bottom: 20px; }
-    label { display: block; margin-top: 15px; margin-bottom: 5px; color: #555; font-weight: 600; }
-    input[type="text"], input[type="email"], input[type="tel"], textarea { width: 100%; padding: 10px 12px; border: 1px solid #ccc; border-radius: 6px; font-size: 15px; transition: border 0.2s; }
-    input:focus, textarea:focus { border-color: #4CAF50; outline: none; }
-    textarea { resize: vertical; min-height: 80px; }
-    input[type="file"] { margin-top: 10px; }
-    button { margin-top: 20px; width: 100%; padding: 12px; background-color: #4CAF50; color: white; font-size: 16px; font-weight: bold; border: none; border-radius: 6px; cursor: pointer; transition: background-color 0.3s ease; }
-    button:hover { background-color: #45a049; }
-    #result { font-weight: bold; padding: 10px; margin-top: 15px; text-align: center; border-radius: 6px; }
-    .success { background-color: #4CAF50; color: white; }
-    .error { background-color: #f44336; color: white; }
-    #loading { display: none; text-align: center; color: #333; font-weight: bold; margin-top: 10px; }
+    .form-wrapper { width: 100%; max-width: 600px; }
+    form { background-color: #fff; padding: 30px 40px; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
+    h2 { text-align: center; margin-bottom: 20px; }
+    label { margin-top: 15px; display: block; font-weight: 600; }
+    input, textarea { width: 100%; padding: 10px; border-radius: 6px; border: 1px solid #ccc; }
+    textarea { min-height: 80px; }
+    button { margin-top: 20px; width: 100%; padding: 12px; background: #4CAF50; color: #fff; border: none; border-radius: 6px; font-size: 16px; cursor: pointer; }
+    button:hover { background: #45a049; }
+    #result { margin-top: 15px; padding: 10px; text-align: center; font-weight: bold; }
+    .success { background: #4CAF50; color: #fff; }
+    .error { background: #f44336; color: #fff; }
+    #loading { display: none; text-align: center; margin-top: 10px; }
   </style>
 </head>
+
 <body>
-  <div class="form-wrapper">
-    <form id="register-form">
-      <h2>Rejestracja</h2>
+<div class="form-wrapper">
+<form id="register-form">
+  <h2 id="form-title">Rejestracja</h2>
 
-      <label for="imie">Imię:</label>
-      <input type="text" id="imie" name="imie" required oninput="this.value = this.value.toUpperCase();">
+  <label>Imię</label>
+  <input id="imie" required oninput="this.value=this.value.toUpperCase()">
 
-      <label for="nazwisko">Nazwisko:</label>
-      <input type="text" id="nazwisko" name="nazwisko" required oninput="this.value = this.value.toUpperCase();">
+  <label>Nazwisko</label>
+  <input id="nazwisko" required oninput="this.value=this.value.toUpperCase()">
 
-      <label for="miasto">Miasto:</label>
-      <input type="text" id="miasto" name="miasto">
+  <label>Miasto</label>
+  <input id="miasto">
 
-      <label for="wojewodztwo">Województwo:</label>
-      <input type="text" id="wojewodztwo" name="wojewodztwo">
+  <label>Województwo</label>
+  <input id="wojewodztwo">
 
-      <label for="nrE">Nr upr. EKSPLOATACJA:</label>
-      <textarea id="nrE" name="nrE" placeholder="Jeżeli posiadasz również uprawnienia pomiarowe, wypełniasz tylko pole poniżej: Nr uprawnień E z pomiarami"></textarea>
+  <label>Nr upr. EKSPLOATACJA</label>
+  <textarea id="nrE"></textarea>
 
-      <label for="nrEPomiary">Nr upr. EKSPLOATACJA Z POMIARAMI:</label>
-      <textarea id="nrEPomiary" name="nrEPomiary" placeholder="Jeżeli nie posiadasz pozostaw pole puste"></textarea>
+  <label>Nr upr. EKSPLOATACJA Z POMIARAMI</label>
+  <textarea id="nrEPomiary"></textarea>
 
-      <label for="nrD">Nr upr. DOZÓR:</label>
-      <textarea id="nrD" name="nrD" placeholder="Jeżeli nie posiadasz pozostaw pole puste"></textarea>
+  <label>Nr upr. DOZÓR</label>
+  <textarea id="nrD"></textarea>
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" readonly>
+  <label>Email</label>
+  <input id="email" readonly>
 
-      <label for="telefon">Telefon:</label>
-      <input type="tel" id="telefon" name="telefon">
+  <label>Telefon</label>
+  <input id="telefon">
 
-      <label for="zajmujeSie">Zajmuje się:</label>
-      <textarea id="zajmujeSie" name="zajmujeSie" placeholder="Tu możesz podać informację o Tobie, które zostaną wyświetlone osobie szukającej elektryka w Twojej okolicy"></textarea>
+  <label>Zajmuje się</label>
+  <textarea id="zajmujeSie"></textarea>
 
-      <label for="plik">Załącz skan uprawnień:</label>
-      <input type="file" id="plik" name="plik" accept="*/*" multiple>
+  <label>Załącz skan uprawnień</label>
+  <input type="file" id="plik" multiple>
 
-      <button type="submit">Zarejestruj</button>
+  <button id="submit-btn">Zarejestruj</button>
 
-      <p id="result"></p>
-      <p id="loading">Trwa rejestracja, proszę czekać...</p>
-    </form>
-  </div>
+  <div id="loading">Zapisywanie...</div>
+  <div id="result"></div>
+</form>
+</div>
 
-  <script type="module">
-    import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
+<script type="module">
+import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
-    const supabaseUrl = 'https://tfbqqduxtsacvwfigsvt.supabase.co';
-    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'; // wstaw swój klucz
-    const supabase = createClient(supabaseUrl, supabaseKey);
+const supabase = createClient(
+  'https://tfbqqduxtsacvwfigsvt.supabase.co',
+  'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRmYnFxZHV4dHNhY3Z3Zmlnc3Z0Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY2OTE4NzcsImV4cCI6MjA4MjI2Nzg3N30.PhuNnwzQ8cZW_UyUjCxXaYAj7xCCiTnOJVd4fUtQRD8'
+)
 
-    const emailInput = document.getElementById('email');
+let currentUser = null
+let recordExists = false
 
-    // Pobranie aktualnego użytkownika
-    let currentUser = null;
-    document.addEventListener('DOMContentLoaded', async () => {
-      try {
-        const { data: { user } } = await supabase.auth.getUser();
-        if (user) {
-          emailInput.value = user.email;
-          emailInput.readOnly = true;
-          currentUser = user;
-        }
-      } catch (err) {
-        console.error('Błąd przy pobieraniu użytkownika:', err);
-      }
-    });
+const fields = [
+  'imie','nazwisko','miasto','wojewodztwo',
+  'nrE','nrEPomiary','nrD','telefon','zajmujeSie'
+]
 
-    document.getElementById('register-form').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const result = document.getElementById('result');
-      result.textContent = '';
-      result.className = '';
-      document.getElementById('loading').style.display = 'block';
+document.addEventListener('DOMContentLoaded', async () => {
+  const { data: { user } } = await supabase.auth.getUser()
+  if (!user) return
 
-      const imie = document.getElementById('imie').value.trim();
-      const nazwisko = document.getElementById('nazwisko').value.trim();
-      const miasto = document.getElementById('miasto').value.trim();
-      const wojewodztwo = document.getElementById('wojewodztwo').value.trim();
-      const nrE = document.getElementById('nrE').value.trim();
-      const nrEPomiary = document.getElementById('nrEPomiary').value.trim();
-      const nrD = document.getElementById('nrD').value.trim();
-      const email = document.getElementById('email').value.trim();
-      const telefon = document.getElementById('telefon').value.trim();
-      const zajmujeSie = document.getElementById('zajmujeSie').value.trim();
+  currentUser = user
+  email.value = user.email
 
-      // Walidacja
-      if (nrE && nrEPomiary) {
-        document.getElementById('loading').style.display = 'none';
-        result.textContent = 'Musisz wybrać EKSPLOATACJA lub EKSPLOATACJA Z POMIARAMI';
-        result.className = 'error';
-        return;
-      }
+  const { data } = await supabase
+    .from('tabela_elektrykow')
+    .select('*')
+    .eq('email', user.email)
+    .single()
 
-      if (nrD && !nrEPomiary) {
-        document.getElementById('loading').style.display = 'none';
-        result.textContent = 'Aby posiadać uprawnienia DOZOROWE, trzeba mieć również EKSPLOATACJE Z POMIARAMI';
-        result.className = 'error';
-        return;
-      }
+  if (data) {
+    recordExists = true
+    document.getElementById('form-title').textContent = 'Aktualizacja danych'
+    document.getElementById('submit-btn').textContent = 'Zapisz zmiany'
+    fields.forEach(f => data[f] && (document.getElementById(f).value = data[f]))
+  }
+})
 
-      if (!currentUser) {
-        document.getElementById('loading').style.display = 'none';
-        result.textContent = 'Nie jesteś zalogowany';
-        result.className = 'error';
-        return;
-      }
+document.getElementById('register-form').addEventListener('submit', async e => {
+  e.preventDefault()
+  loading.style.display = 'block'
+  result.textContent = ''
+  result.className = ''
 
-      // Upload plików
-      const plikInput = document.getElementById('plik');
-      let plikUrls = [];
+  if (nrE.value && nrEPomiary.value) {
+    loading.style.display = 'none'
+    result.textContent = 'Wybierz tylko jeden rodzaj eksploatacji'
+    result.className = 'error'
+    return
+  }
 
-      if (plikInput.files.length > 0) {
-        for (let i = 0; i < plikInput.files.length; i++) {
-          const file = plikInput.files[i];
-          const filePath = `permissions/${currentUser.id}/${Date.now()}_${i}_${file.name}`;
+  if (nrD.value && !nrEPomiary.value) {
+    loading.style.display = 'none'
+    result.textContent = 'Do DOZORU wymagane są pomiary'
+    result.className = 'error'
+    return
+  }
 
-          const { error: uploadError } = await supabase.storage
-            .from('attachments')
-            .upload(filePath, file, { upsert: true });
+  let plikUrls = []
+  if (plik.files.length) {
+    for (let i=0;i<plik.files.length;i++) {
+      const path = `permissions/${currentUser.id}/${Date.now()}_${plik.files[i].name}`
+      await supabase.storage.from('attachments').upload(path, plik.files[i], { upsert: true })
+      const { data } = await supabase.storage.from('attachments').createSignedUrl(path, 3600)
+      plikUrls.push(data.signedUrl)
+    }
+  }
 
-          if (uploadError) {
-            document.getElementById('loading').style.display = 'none';
-            result.textContent = 'Błąd przesyłania pliku: ' + uploadError.message;
-            result.className = 'error';
-            return;
-          }
+  const payload = { email: currentUser.email }
+  fields.forEach(f => payload[f] = document.getElementById(f).value.trim())
+  if (plikUrls.length) payload.plik = plikUrls.join(',')
 
-          const { data: signedUrlData, error: signedUrlError } = await supabase.storage
-            .from('attachments')
-            .createSignedUrl(filePath, 3600);
+  const { error } = await supabase
+    .from('tabela_elektrykow')
+    .upsert(payload, { onConflict: 'email' })
 
-          if (signedUrlError) {
-            document.getElementById('loading').style.display = 'none';
-            result.textContent = 'Błąd generowania URL pliku: ' + signedUrlError.message;
-            result.className = 'error';
-            return;
-          }
+  loading.style.display = 'none'
 
-          plikUrls.push(signedUrlData.signedUrl);
-        }
-      }
-
-      const plikiString = plikUrls.join(',');
-
-      // Upsert do tabeli
-      const { error } = await supabase.from('tabela_elektrykow').upsert([{
-        imie, nazwisko, miasto, wojewodztwo,
-        nrE, nrEPomiary, nrD, email, telefon,
-        zajmujeSie, plik: plikiString
-      }], { onConflict: 'email' });
-
-      document.getElementById('loading').style.display = 'none';
-
-      if (error) {
-        let message = error.message;
-        if (message.includes('unique_email')) {
-          message = 'Ten adres e-mail jest już zarejestrowany';
-        }
-        result.textContent = 'Błąd: ' + message;
-        result.className = 'error';
-      } else {
-        window.location.href = 'https://orep.pl/logowanie';
-      }
-    });
-  </script>
+  if (error) {
+    result.textContent = error.message
+    result.className = 'error'
+  } else {
+    result.textContent = recordExists ? 'Dane zaktualizowane' : 'Rejestracja zakończona'
+    result.className = 'success'
+  }
+})
+</script>
 </body>
 </html>
