--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -8,25 +8,110 @@
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
   <style>
-    body { font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; background-color: #f4f6f8; display: flex; justify-content: center; padding: 20px; }
-    .form-wrapper { width: 100%; max-width: 600px; }
-    form { background-color: #fff; padding: 30px 40px; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); }
-    h2 { text-align: center; margin-bottom: 20px; }
-    label { margin-top: 15px; display: block; font-weight: 600; }
-    input, textarea { width: 100%; padding: 10px; border-radius: 6px; border: 1px solid #ccc; }
-    textarea { min-height: 80px; }
-    button { margin-top: 20px; width: 100%; padding: 12px; background: #4CAF50; color: #fff; border: none; border-radius: 6px; font-size: 16px; cursor: pointer; }
-    button:hover { background: #45a049; }
-    #result { margin-top: 15px; padding: 10px; text-align: center; font-weight: bold; }
-    .success { background: #4CAF50; color: #fff; }
-    .error { background: #f44336; color: #fff; }
-    #loading { display: none; text-align: center; margin-top: 10px; }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f6f8;
+      display: flex;
+      justify-content: center;
+      padding: 20px;
+    }
+
+    .form-wrapper {
+      width: 100%;
+      max-width: 600px;
+    }
+
+    form {
+      position: relative;
+      background-color: #fff;
+      padding: 30px 40px;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    label {
+      margin-top: 15px;
+      display: block;
+      font-weight: 600;
+    }
+
+    input, textarea {
+      width: 100%;
+      padding: 10px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+    }
+
+    textarea {
+      min-height: 80px;
+    }
+
+    button[type="submit"] {
+      margin-top: 20px;
+      width: 100%;
+      padding: 12px;
+      background: #4CAF50;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+
+    button[type="submit"]:hover {
+      background: #45a049;
+    }
+
+    #close-btn {
+      position: absolute;
+      top: 12px;
+      right: 12px;
+      background: transparent;
+      border: none;
+      font-size: 26px;
+      font-weight: bold;
+      cursor: pointer;
+      color: #666;
+      line-height: 1;
+    }
+
+    #close-btn:hover {
+      color: #000;
+    }
+
+    #result {
+      margin-top: 15px;
+      padding: 10px;
+      text-align: center;
+      font-weight: bold;
+    }
+
+    .error {
+      background: #f44336;
+      color: #fff;
+    }
+
+    #loading {
+      display: none;
+      text-align: center;
+      margin-top: 10px;
+      font-weight: bold;
+    }
   </style>
 </head>
 
 <body>
 <div class="form-wrapper">
 <form id="register-form">
+
+  <!-- PRZYCISK ZAMYKANIA -->
+  <button type="button" id="close-btn" aria-label="Zamknij formularz">×</button>
+
   <h2 id="form-title">Rejestracja</h2>
 
   <label>Imię</label>
@@ -62,9 +147,9 @@
   <label>Załącz skan uprawnień</label>
   <input type="file" id="plik" multiple>
 
-  <button id="submit-btn">Zarejestruj</button>
+  <button type="submit" id="submit-btn">Zarejestruj</button>
 
-  <div id="loading">Zapisywanie...</div>
+  <div id="loading">Zapisywanie danych...</div>
   <div id="result"></div>
 </form>
 </div>
@@ -78,12 +163,16 @@ const supabase = createClient(
 )
 
 let currentUser = null
-let recordExists = false
 
 const fields = [
   'imie','nazwisko','miasto','wojewodztwo',
   'nrE','nrEPomiary','nrD','telefon','zajmujeSie'
 ]
+
+// Zamknięcie formularza → strona główna
+document.getElementById('close-btn').addEventListener('click', () => {
+  window.location.href = 'https://orep.pl/';
+})
 
 document.addEventListener('DOMContentLoaded', async () => {
   const { data: { user } } = await supabase.auth.getUser()
@@ -99,7 +188,6 @@ document.addEventListener('DOMContentLoaded', async () => {
     .single()
 
   if (data) {
-    recordExists = true
     document.getElementById('form-title').textContent = 'Aktualizacja danych'
     document.getElementById('submit-btn').textContent = 'Zapisz zmiany'
     fields.forEach(f => data[f] && (document.getElementById(f).value = data[f]))
@@ -128,7 +216,7 @@ document.getElementById('register-form').addEventListener('submit', async e => {
 
   let plikUrls = []
   if (plik.files.length) {
-    for (let i=0;i<plik.files.length;i++) {
+    for (let i = 0; i < plik.files.length; i++) {
       const path = `permissions/${currentUser.id}/${Date.now()}_${plik.files[i].name}`
       await supabase.storage.from('attachments').upload(path, plik.files[i], { upsert: true })
       const { data } = await supabase.storage.from('attachments').createSignedUrl(path, 3600)
@@ -147,11 +235,11 @@ document.getElementById('register-form').addEventListener('submit', async e => {
   loading.style.display = 'none'
 
   if (error) {
-  result.textContent = error.message
-  result.className = 'error'
-} else {
-  window.location.href = 'https://orep.pl/logowanie';
-}
+    result.textContent = error.message
+    result.className = 'error'
+  } else {
+    window.location.href = 'https://orep.pl/logowanie';
+  }
 })
 </script>
 </body>
