--- a/rejestracja_formularz/index.html
+++ b/rejestracja_formularz/index.html
@@ -110,7 +110,7 @@
 <form id="register-form">
 
   <!-- PRZYCISK ZAMYKANIA -->
-  <button type="button" id="close-btn" aria-label="Zamknij formularz">×</button>
+  <button type="button" id="close-btn" aria-label="Zamknij formularz">❌</button>
 
   <h2 id="form-title">Rejestracja</h2>
 
