--- a/profil/index.html
+++ b/profil/index.html
@@ -122,7 +122,42 @@
       <div class="profile-picture">
         <!-- SVG ludzik -->
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#000" preserveAspectRatio="xMidYMid meet">
-          <path d="M12 12c2.7 0 4.8-2.1 4.8-4.8S14.7 2.4 12 2.4 7.2 4.5 7.2 7.2 9.3 12 12 12zm0 2.4c-3.2 0-9.6 1.6-9.6 4.8V22h19.2v-2.8c0-3.2-6.4-4.8-9.6-4.8z"/>
+          <!-- Litera S -->
+  <path
+    d="M60 65
+       C45 65, 45 85, 60 85
+       C80 85, 80 115, 60 115
+       C45 115, 45 135, 60 135"
+    fill="none"
+    stroke="#ffffff"
+    stroke-width="14"
+    stroke-linecap="round"
+  />
+
+  <!-- Litera E -->
+  <path
+    d="M90 65
+       L90 135
+       M90 65 L120 65
+       M90 100 L115 100
+       M90 135 L120 135"
+    fill="none"
+    stroke="#ffffff"
+    stroke-width="14"
+    stroke-linecap="round"
+  />
+
+  <!-- Litera P -->
+  <path
+    d="M140 135
+       L140 65
+       M140 65
+       C165 65, 165 95, 140 95"
+    fill="none"
+    stroke="#ffffff"
+    stroke-width="14"
+    stroke-linecap="round"
+  />
         </svg>
       </div>
     </div>
