--- a/profil/index.html
+++ b/profil/index.html
@@ -120,8 +120,10 @@
   <div class="container">
     <div class="cover-photo">
       <div class="profile-picture">
-        <!-- SVG ludzik -->
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#000" preserveAspectRatio="xMidYMid meet">
+        <!-- SVG napis sep -->
+        <svg xmlns="http://www.w3.org/2000/svg"
+     viewBox="0 0 200 200"
+     preserveAspectRatio="xMidYMid meet">
           <!-- Litera S -->
   <path
     d="M60 65
