--- a/profil/index.html
+++ b/profil/index.html
@@ -131,7 +131,7 @@
        C80 85, 80 115, 60 115
        C45 115, 45 135, 60 135"
     fill="none"
-    stroke="#ffffff"
+    stroke="#0B5FA5"
     stroke-width="14"
     stroke-linecap="round"
   />
@@ -144,7 +144,7 @@
        M90 100 L115 100
        M90 135 L120 135"
     fill="none"
-    stroke="#ffffff"
+    stroke="#0B5FA5"
     stroke-width="14"
     stroke-linecap="round"
   />
@@ -156,7 +156,7 @@
        M140 65
        C165 65, 165 95, 140 95"
     fill="none"
-    stroke="#ffffff"
+    stroke="#0B5FA5"
     stroke-width="14"
     stroke-linecap="round"
   />
