--- a/profil/index.html
+++ b/profil/index.html
@@ -122,45 +122,50 @@
       <div class="profile-picture">
         <!-- SVG napis sep -->
         <svg xmlns="http://www.w3.org/2000/svg"
-     viewBox="0 0 200 200"
+     viewBox="0 0 300 120"
      preserveAspectRatio="xMidYMid meet">
-          <!-- Litera S -->
+
+  <!-- S -->
   <path
-    d="M60 65
-       C45 65, 45 85, 60 85
-       C80 85, 80 115, 60 115
-       C45 115, 45 135, 60 135"
+    d="M60 25
+       C30 25, 30 55, 60 55
+       C90 55, 90 85, 60 85
+       C30 85, 30 115, 60 115"
     fill="none"
     stroke="#0B5FA5"
-    stroke-width="14"
+    stroke-width="18"
     stroke-linecap="round"
+    stroke-linejoin="round"
   />
 
-  <!-- Litera E -->
+  <!-- E -->
   <path
-    d="M90 65
-       L90 135
-       M90 65 L120 65
-       M90 100 L115 100
-       M90 135 L120 135"
+    d="M130 25
+       L130 115
+       M130 25 L180 25
+       M130 60 L170 60
+       M130 115 L180 115"
     fill="none"
     stroke="#0B5FA5"
-    stroke-width="14"
+    stroke-width="18"
     stroke-linecap="round"
+    stroke-linejoin="round"
   />
 
-  <!-- Litera P -->
+  <!-- P -->
   <path
-    d="M140 135
-       L140 65
-       M140 65
-       C165 65, 165 95, 140 95"
+    d="M210 115
+       L210 25
+       M210 25
+       C260 25, 260 70, 210 70"
     fill="none"
     stroke="#0B5FA5"
-    stroke-width="14"
+    stroke-width="18"
     stroke-linecap="round"
+    stroke-linejoin="round"
   />
-        </svg>
+
+</svg>
       </div>
     </div>
 
